--- a/site-src/app/index.html
+++ b/site-src/app/index.html
@@ -120,7 +120,16 @@
                 <p class="paper-font-body2">Outro painel</p>
               </paper-material>
               <paper-material elevation="1" class="paper-font-body2">
-                <h1 id="license">Mais um painel</h1>
+                <h1 id="license">Musicas</h1>
+                <div>
+                  <div><h3>Principe Igor - Instrumental</h3></div>
+                  <div>
+                    <audio controls> 
+                      <source src="https://raw.githubusercontent.com/joao-parana/meu-coral/master/docs/media/Principe%20Igor%20-%20Tenores.mp3"></source> 
+                      <p>Seu navegador não suporta o elemento audio. Mude para Safari, Chrome ou Firefox</p>
+                    </audio>
+                  </div>
+                </div>
               </paper-material>
             </section>
 
